[API] Changed: Update Presenter Layer (#3)
