# docs/swagger.json
@@ -2,14 +2,16 @@
     "swagger": "2.0",
     "info": {
         "description": "### API de um Fast Food para o Tech Challenge da FIAP - Fase 2 - 10SOAT - G18",
-        "title": "FIAP Tech Challenge Fase 2 - 10SOAT - G18",
+        "title": "FIAP Tech Challenge Fase 2 - 10SOAT - G80",
         "contact": {},
         "version": "1"
     },
+    "host": "localhost:8080",
+    "basePath": "/api/v1",
     "paths": {
         "/products": {
             "get": {
-                "description": "Retorna uma lista paginada de produtos",
+                "description": "List all products",
                 "consumes": [
                     "application/json"
                 ],
@@ -17,33 +19,33 @@
                     "application/json"
                 ],
                 "tags": [
-                    "produtos"
+                    "products"
                 ],
-                "summary": "Listar produtos",
+                "summary": "List products",
                 "parameters": [
                     {
                         "type": "integer",
                         "default": 1,
-                        "description": "Número da página",
+                        "description": "Page number",
                         "name": "page",
                         "in": "query"
                     },
                     {
                         "type": "integer",
                         "default": 10,
-                        "description": "Itens por página",
+                        "description": "Items per page",
                         "name": "limit",
                         "in": "query"
                     },
                     {
                         "type": "string",
-                        "description": "Filtrar por nome",
+                        "description": "Filter by name",
                         "name": "name",
                         "in": "query"
                     },
                     {
                         "type": "integer",
-                        "description": "Filtrar por categoria",
+                        "description": "Filter by category ID",
                         "name": "category_id",
                         "in": "query"
                     }
@@ -52,25 +54,25 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/dto.PaginatedResponse"
+                            "$ref": "#/definitions/presenter.ProductJsonPaginatedResponse"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/dto.ErrorResponse"
+                            "$ref": "#/definitions/middleware.ErrorResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/dto.ErrorResponse"
+                            "$ref": "#/definitions/middleware.ErrorResponse"
                         }
                     }
                 }
             },
             "post": {
-                "description": "Cria um novo produto",
+                "description": "Creates a new product",
                 "consumes": [
                     "application/json"
                 ],
@@ -78,17 +80,17 @@
                     "application/json"
                 ],
                 "tags": [
-                    "produtos"
+                    "products"
                 ],
-                "summary": "Criar produto",
+                "summary": "Create product",
                 "parameters": [
                     {
-                        "description": "Dados do produto",
+                        "description": "Product data",
                         "name": "product",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/dto.ProductRequest"
+                            "$ref": "#/definitions/handler.ProductRequest"
                         }
                     }
                 ],
@@ -96,19 +98,19 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/dto.ProductResponse"
+                            "$ref": "#/definitions/presenter.ProductJsonResponse"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/dto.ErrorResponse"
+                            "$ref": "#/definitions/middleware.ErrorResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/dto.ErrorResponse"
+                            "$ref": "#/definitions/middleware.ErrorResponse"
                         }
                     }
                 }
@@ -116,7 +118,7 @@
         },
         "/products/{id}": {
             "get": {
-                "description": "Busca um produto pelo ID",
+                "description": "Search for a product by ID",
                 "consumes": [
                     "application/json"
                 ],
@@ -124,13 +126,13 @@
                     "application/json"
                 ],
                 "tags": [
-                    "produtos"
+                    "products"
                 ],
-                "summary": "Buscar produto",
+                "summary": "Get product",
                 "parameters": [
                     {
                         "type": "integer",
-                        "description": "ID do produto",
+                        "description": "Product ID",
                         "name": "id",
                         "in": "path",
                         "required": true
@@ -140,31 +142,31 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/dto.ProductResponse"
+                            "$ref": "#/definitions/presenter.ProductJsonResponse"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/dto.ErrorResponse"
+                            "$ref": "#/definitions/middleware.ErrorResponse"
                         }
                     },
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "$ref": "#/definitions/dto.ErrorResponse"
+                            "$ref": "#/definitions/middleware.ErrorResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/dto.ErrorResponse"
+                            "$ref": "#/definitions/middleware.ErrorResponse"
                         }
                     }
                 }
             },
             "put": {
-                "description": "Atualiza um produto existente",
+                "description": "Update an existing product",
                 "consumes": [
                     "application/json"
                 ],
@@ -172,24 +174,24 @@
                     "application/json"
                 ],
                 "tags": [
-                    "produtos"
+                    "products"
                 ],
-                "summary": "Atualizar produto",
+                "summary": "Update product",
                 "parameters": [
                     {
                         "type": "integer",
-                        "description": "ID do produto",
+                        "description": "Product ID",
                         "name": "id",
                         "in": "path",
                         "required": true
                     },
                     {
-                        "description": "Dados do produto",
+                        "description": "Product data",
                         "name": "product",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/dto.ProductRequest"
+                            "$ref": "#/definitions/handler.ProductRequest"
                         }
                     }
                 ],
@@ -197,42 +199,42 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/dto.ProductResponse"
+                            "$ref": "#/definitions/presenter.ProductJsonResponse"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/dto.ErrorResponse"
+                            "$ref": "#/definitions/middleware.ErrorResponse"
                         }
                     },
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "$ref": "#/definitions/dto.ErrorResponse"
+                            "$ref": "#/definitions/middleware.ErrorResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/dto.ErrorResponse"
+                            "$ref": "#/definitions/middleware.ErrorResponse"
                         }
                     }
                 }
             },
             "delete": {
-                "description": "Remove um produto existente",
+                "description": "Deletes a product by ID",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
-                    "produtos"
+                    "products"
                 ],
-                "summary": "Deletar produto",
+                "summary": "Delete product",
                 "parameters": [
                     {
                         "type": "integer",
-                        "description": "ID do produto",
+                        "description": "Product ID",
                         "name": "id",
                         "in": "path",
                         "required": true
@@ -245,19 +247,19 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/dto.ErrorResponse"
+                            "$ref": "#/definitions/middleware.ErrorResponse"
                         }
                     },
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "$ref": "#/definitions/dto.ErrorResponse"
+                            "$ref": "#/definitions/middleware.ErrorResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/dto.ErrorResponse"
+                            "$ref": "#/definitions/middleware.ErrorResponse"
                         }
                     }
                 }
@@ -265,20 +267,47 @@
         }
     },
     "definitions": {
-        "dto.ErrorResponse": {
+        "handler.ProductRequest": {
             "type": "object",
+            "required": [
+                "category_id",
+                "name",
+                "price"
+            ],
             "properties": {
-                "code": {
+                "category_id": {
                     "type": "integer",
-                    "example": 400
+                    "example": 1
                 },
-                "message": {
+                "description": {
                     "type": "string",
-                    "example": "Erro de validação"
+                    "maxLength": 500,
+                    "example": "Descrição do Produto A"
+                },
+                "name": {
+                    "type": "string",
+                    "maxLength": 100,
+                    "minLength": 3,
+                    "example": "Produto A"
+                },
+                "price": {
+                    "type": "number",
+                    "example": 99.99
                 }
             }
         },
-        "dto.PaginatedResponse": {
+        "middleware.ErrorResponse": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "integer"
+                },
+                "message": {
+                    "type": "string"
+                }
+            }
+        },
+        "presenter.ProductJsonPaginatedResponse": {
             "type": "object",
             "properties": {
                 "limit": {
@@ -292,7 +321,7 @@
                 "products": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/dto.ProductResponse"
+                        "$ref": "#/definitions/presenter.ProductJsonResponse"
                     }
                 },
                 "total": {
@@ -301,28 +330,7 @@
                 }
             }
         },
-        "dto.ProductRequest": {
-            "type": "object",
-            "properties": {
-                "category_id": {
-                    "type": "integer",
-                    "example": 1
-                },
-                "description": {
-                    "type": "string",
-                    "example": "Descrição do Produto A"
-                },
-                "name": {
-                    "type": "string",
-                    "example": "Produto A"
-                },
-                "price": {
-                    "type": "number",
-                    "example": 99.99
-                }
-            }
-        },
-        "dto.ProductResponse": {
+        "presenter.ProductJsonResponse": {
             "type": "object",
             "properties": {
                 "category_id": {
@@ -364,6 +372,24 @@
             "in": "header"
         }
     },
+    "tags": [
+        {
+            "description": "Regiter a new customer or staff",
+            "name": "sign-up"
+        },
+        {
+            "description": "List, create, update and delete products",
+            "name": "products"
+        },
+        {
+            "description": "Process payments",
+            "name": "payments"
+        },
+        {
+            "description": "Sign in to the system",
+            "name": "sign-in"
+        }
+    ],
     "externalDocs": {
         "description": "GitHub Repository",
         "url": "https://github.com/FIAP-SOAT-G20/FIAP-TechChallenge-Fase2"
