# internal/adapter/presenter/product_xml_response.go
@@ -1,0 +1,22 @@
+package presenter
+
+type ProductXmlResponse struct {
+	ID          uint64  `xml:"id" example:"1"`
+	Name        string  `xml:"name" example:"Produto A"`
+	Description string  `xml:"description" example:"Descrição do Produto A"`
+	Price       float64 `xml:"price" example:"99.99"`
+	CategoryID  uint64  `xml:"category_id" example:"1"`
+	CreatedAt   string  `xml:"created_at" example:"2024-02-09T10:00:00Z"`
+	UpdatedAt   string  `xml:"updated_at" example:"2024-02-09T10:00:00Z"`
+}
+
+type ProductXmlPaginatedResponse struct {
+	XmlPagination
+	Products []ProductXmlResponse `xml:"products"`
+}
+
+type XmlPagination struct {
+	Total int64 `xml:"total" example:"100"`
+	Page  int   `xml:"page" example:"1"`
+	Limit int   `xml:"limit" example:"10"`
+}
