# internal/core/domain/entity/product_entity.go
@@ -2,21 +2,19 @@ package entity
 
 import (
 	"time"
-
-	"github.com/FIAP-SOAT-G20/FIAP-TechChallenge-Fase2/internal/core/domain/validator"
 )
 
 type Product struct {
-	ID          uint64    `json:"id"`
-	Name        string    `json:"name" validate:"required,min=3,max=100"`
-	Description string    `json:"description" validate:"max=500"`
-	Price       float64   `json:"price" validate:"required,gt=0"`
-	CategoryID  uint64    `json:"category_id" validate:"required,gt=0"`
-	CreatedAt   time.Time `json:"created_at"`
-	UpdatedAt   time.Time `json:"updated_at"`
+	ID          uint64
+	Name        string
+	Description string
+	Price       float64
+	CategoryID  uint64
+	CreatedAt   time.Time
+	UpdatedAt   time.Time
 }
 
-func NewProduct(name string, description string, price float64, categoryID uint64) (*Product, error) {
+func NewProduct(name string, description string, price float64, categoryID uint64) *Product {
 	product := &Product{
 		Name:        name,
 		Description: description,
@@ -26,23 +24,13 @@ func NewProduct(name string, description string, price float64, categoryID uint6
 		UpdatedAt:   time.Now(),
 	}
 
-	if err := product.Validate(); err != nil {
-		return nil, err
-	}
-
-	return product, nil
+	return product
 }
 
-func (p *Product) Update(name string, description string, price float64, categoryID uint64) error {
+func (p *Product) Update(name string, description string, price float64, categoryID uint64) {
 	p.Name = name
 	p.Description = description
 	p.Price = price
 	p.CategoryID = categoryID
 	p.UpdatedAt = time.Now()
-
-	return p.Validate()
-}
-
-func (p *Product) Validate() error {
-	return validator.GetValidator().Struct(p)
 }
